@@ -29,6 +29,11 @@ package org.hisp.dhis.expression;
 
 import static org.hisp.dhis.expression.MissingValueStrategy.NEVER_SKIP;
 
+import java.time.LocalDate;
+import java.time.Month;
+import java.time.ZoneId;
+import java.util.Collections;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,8 +50,8 @@ import org.hisp.dhis.common.MapMap;
 import org.hisp.dhis.dataset.DataSet;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroup;
+import org.hisp.dhis.period.DailyPeriodType;
 import org.hisp.dhis.period.Period;
-import org.hisp.dhis.period.PeriodType;
 import org.hisp.dhis.program.Program;
 
 /**
@@ -67,7 +72,18 @@ public class ExpressionParams
      * description. The actual date doesn't matter; a date was chosen that is
      * likely to not be confused with real data.
      */
-    private static final List<Period> SAMPLE_PERIODS = List.of( PeriodType.getPeriodFromIsoString( "19990101" ) );
+    private static final List<Period> SAMPLE_PERIODS;
+
+    static
+    {
+        Date genTheFirst99 = Date
+            .from( LocalDate.of( 1999, Month.JANUARY, 1 ).atStartOfDay( ZoneId.systemDefault() ).toInstant() );
+        Period period = new Period();
+        period.setPeriodType( new DailyPeriodType() );
+        period.setStartDate( genTheFirst99 );
+        period.setEndDate( genTheFirst99 );
+        SAMPLE_PERIODS = Collections.singletonList( period );
+    }
 
     /**
      * The expression to parse
